# TimingPlusPlus

./: CMakeLists.txt  main.cpp
Code/Include/: StopWatch.h  TimeManager.h  Types.h
Code/Source/: StopWatch.cpp  TimeManager.cpp
